fix: mobile nav content overflow

--- a/src/components/layouts/navigation/navigation.module.css
+++ b/src/components/layouts/navigation/navigation.module.css
@@ -55,7 +55,7 @@
   height: 100%;
   /*height: 90vh;
   max-height: 90vh;*/
-  overflow-y: hidden;
+  overflow: auto ;
   margin: 20px 0;
   overscroll-behavior: contain;
   -ms-overflow-style: none; /* IE and Edge */
@@ -65,6 +65,9 @@
   &::-webkit-scrollbar {
     display: none;
   }
+   * > main {
+    overflow: hidden !important;
+    }
 }
 
 @media (--lg), (--md) {
